# one_star_booking

./: .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  wait-for-it.sh
alembic/: env.py
alembic/versions/: 188335da0b9b_init.py
src/one_star_booking/: main.py
src/one_star_booking/backend/: base.py  session.py
src/one_star_booking/model/: __init__.py  booking.py  hotel.py
src/one_star_booking/routers/: __init__.py  booking.py  hotel.py
src/one_star_booking/schemas/: __init__.py  booking.py  hotel.py
