[project]
name = "one-star-booking"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavloff",email = "asas290@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "one_star_booking", from = "src"}]


[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "C4"]
ignore = ["E501"]

[tool.ruff.mccabe]
max-complexity = 10


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
