[project]
name = "one-star-booking"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavloff",email = "asas290@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

packages = [
  { include = "backend", from = "src" },
  { include = "models",  from = "src" },
  { include = "schemas", from = "src" },
  { include = "routers", from = "src" },
]

[tool.poetry]
packages = [{include = "one_star_booking", from = "src"}]


[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "C4"]
ignore = ["E501"]

[tool.ruff.mccabe]
max-complexity = 10


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
